Add runTimer function

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:textAppearance="@android:style/TextAppearance.Large"
-            android:text="TextView"
+            android:text="0"
             android:textSize="56sp" />
 
         <Button
